--- a/GAScore/testbench/xpams_rx.yaml
+++ b/GAScore/testbench/xpams_rx.yaml
@@ -12,7 +12,7 @@ Description:
 Dependencies: 
 
 # Required Data #
-Module_Name: xpams
+Module_Name: xpams_rx
 Timescale: 1ns / 1ps #the default timescale of the simulation
 Time_Format: {unit: "1us", precision: 3} #can be one of s, ms, us, ns, ps, fs
 Flag_Count: 1
@@ -49,6 +49,13 @@ DUT:
       {name: "TREADY", type: "tready"},
       {name: "TLAST", type: "tlast"}
     ]}
+  - {direction: master, name: axis_handler, type: axis, clock: ap_clk, 
+  c_struct: axis_wordNoKeep, c_stream: uaxis_n, channels: [
+      {name: "TDATA", type: "tdata", size: 64},
+      {name: "TVALID", type: "tvalid"},
+      {name: "TREADY", type: "tready"},
+      {name: "TLAST", type: "tlast"}
+    ]}
 
 ################################################################################
 
@@ -60,6 +67,7 @@ Initialize: &Initialize
     - {name: ap_rst_n, value: 1}
     - {name: "axis_tx_TREADY", value: 1}
     - {name: "axis_kernel_out_TREADY", value: 1}
+    - {name: "axis_handler_TREADY", value: 1}
 
 # This sends a AMheader + payload with no handler args to xpams. There's 
 # an empty handler receiving it so it sends a reply message back and passes 
@@ -67,6 +75,7 @@ Initialize: &Initialize
 Medium_Message_A: &Medium_Message_A
   - Parallel_Section_0: *Initialize
   - Parallel_Section_1:
+    - wait: {key: ap_clk}
     - delay: 100ns
     - timestamp: INIT
     - interface: {type: axis, name: axis_rx, payload: [
@@ -96,6 +105,7 @@ Medium_Message_A: &Medium_Message_A
 Short_Message_A: &Short_Message_A
   - Parallel_Section_0: *Initialize
   - Parallel_Section_1:
+    - wait: {key: ap_clk}
     - delay: 100ns
     - timestamp: INIT
     - interface: {type: axis, name: axis_rx, payload: [
@@ -104,26 +114,32 @@ Short_Message_A: &Short_Message_A
     ]}
   - Parallel_Section_2:
     - interface: {type: axis, name: axis_kernel_out, payload: [
-      {tdata: "{AMToken,0x1}", tdest: 0x2}
+      {tdata: "{AMToken,0x1,0x41}", tdest: 0x2}
     ]}
     - timestamp: Short_Message_A
     - macro: END
 
-# This sends a AMheader + token with two handler args to xpams. There's 
-# an empty handler receiving it so it just sends a reply message back. At 
-# the moment, I'm not sure if it should accept more words from the GAScore 
+# This sends a AMheader + token with two handler args to xpams. The header + 
+# handler args are forwarded to the handler and a reply message is sent back
 Long_Message_A: &Long_Message_A
   - Parallel_Section_0: *Initialize
   - Parallel_Section_1:
+    - wait: {key: ap_clk}
     - delay: 100ns
     - timestamp: INIT
     - interface: {type: axis, name: axis_rx, payload: [
-      {tdata: "{AMHeader,0xAA,0x2,0xC,0,0x5,2}", tkeep: "KEEP_ALL"},
+      {tdata: "{AMHeader,0xAA,0x2,0xC,1,0x5,2}", tkeep: "KEEP_ALL"},
       {tdata: "{AMLongStride,0x100,4,3,2}"},
       {tdata: "0xAABBCCDD"},
       {tdata: "0xDDCCBBAA", tlast: 1, callTB: 3}
     ]}
   - Parallel_Section_2:
+    - interface: {type: axis, name: axis_handler, payload: [
+      {tdata: "{AMHeader,0xAA,0x2,0xC,1,0x5,2}"},
+      {tdata: "0xAABBCCDD"},
+      {tdata: "0xDDCCBBAA", tlast: 1}
+    ]}
+  - Parallel_Section_3:
     - interface: {type: axis, name: axis_tx, payload: [
       {tdata: "{AMHeader,0x2,0xAA,0,0,0x41,0}"},
       {tdata: "{AMToken,0x2}", tlast: 1}
