Add preliminary HLS/MB library for AMs
feat: Add script to package GAScore
feat: Generalize Vivado project Make process
feat: Add run.sh to simplify interacting with the Makefile
feat: Add GAScore.v to git
feat: Update loopback address to be inclusive range
feat: Add MB_GAScore_0.cpp as initial HW test for GAScore
feat: Convert all remaining testbenches to Sonar's Python API
feat: Add TCL script to make MB_GAScore_0 Vivado project
feat: Update init.sh to add more env variables
fix: Fix synthesis bugs with handler_wrapper
refactor: Change existing env variables and add new ones
refactor: Update paths to reflect version/parts
style: Remove extraneous commas in GAScore.py
style: Move some macros from utilities.hpp to config.hpp
test: Add additional Make clean targets
test: Add helper program to parse header values
chore: Update .gitignore

This commit begins the process to migrate the GAScore to HW.
There were some QoL updates to improve scripts and support
different hardware/tool versions. Some bug fixes were made
as the migration took place. Preliminary results suggest that
the core is working with the MB library.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ vivado*.log
 vivado*.jou
 GAScore/vivado_hls/projects/
 GAScore/repo
+repo
 GAScore/vivado/projects/
 GAScore/vivado/src/
 build/
@@ -16,6 +17,7 @@ archive/
 .Xil/
 hs_err_pid*.log
 vivado_pid*.str
+*.tmp
 
 # Prerequisites
 *.d
