--- a/helper/Makefile
+++ b/helper/Makefile
@@ -1,5 +1,5 @@
 parse_header: 
 	g++ -g -Wall -I$(SHOAL_PATH)/GAScore/include \
 		-Wno-unknown-pragmas -Wno-comment -Wno-shift-count-overflow \
-		-o $(SHOAL_PATH)/share/build/bin/parse_header \
-		$(SHOAL_PATH)/share/src/parse_header.cpp
+		-o $(SHOAL_PATH)/helper/build/bin/parse_header \
+		$(SHOAL_PATH)/helper/src/parse_header.cpp
