feat: Add GAScore benchmarking
feat: Update net_out to use TDEST
feat: Unify HLS and MB libraries into Active Messages
feat: Add Wireshark dissector for AMs
fix: Update sonar_strToInt to use new bitfields
refactor: Use custom typedefs in test software

The testbenches still need to be updated to use bytes
instead of words for payload size (same needs to be
reflected in the IPs as well). The SW library is distinct
in thegasnet* files but the MB and HLS are unified. The
core is also almost complete with the byte change needed
to be propogated through

--- a/GAScore/Makefile
+++ b/GAScore/Makefile
@@ -56,7 +56,7 @@ helper_include_dir = $(helper_dir)/include
 
 c_modules := am_rx am_tx xpams_rx hold_buffer xpams_tx handler
 hdl_modules := memory
-custom_modules := handler_wrapper GAScore
+custom_modules := handler_wrapper GAScore GAScore_benchmark
 test_projects := MB_GAScore_0 MB_GAScore_1
 
 obj = $(shell find $(obj_dir) -name '*.o' -printf '%f\n' | \
