Redo hardware handler
feat: Add more methods to kernel library
feat: Remove GAScore_benchmark and merge functions
feat: Add include.mk for common targets
fix: Old payload sizes (non-bytes) in GAScore.py
fix: Wrong USE_ABS_PAYLOAD ifdefs in GAScore

This should be the last part of the word -> byte shift in
the sonar testbenches. The kernel library is also more
developed with long and medium messages (strided/vectored
are not tested yet).

--- a/GAScore/Makefile
+++ b/GAScore/Makefile
@@ -2,6 +2,8 @@
 # Include
 ################################################################################
 
+include $(SHOAL_PATH)/include.mk
+
 ################################################################################
 # Prologue
 ################################################################################
@@ -76,13 +78,6 @@ CFLAGS = -g -Wall -I$(local_include_dir) -I$(helper_include_dir) -I$(global_incl
 ################################################################################
 
 .PHONY: test hw sim clean
-
-# checks that variables are set prior to running targets
-guard-%:
-	@ if [ "${${*}}" = "" ]; then \
-		echo "Variable $* not set"; \
-		exit 1; \
-	fi
 
 #-------------------------------------------------------------------------------
 # C++ Testbench Execution
