Add support for compiling kernels for HLS
feat: Add two node version of test app
feat: Update AM HLS library
feat: Export register map from handler
fix: Update handler to let kernel reset values
refactor: generate.sh uses finalName variable
chore: Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ archive/
 hs_err_pid*.log
 vivado_pid*.str
 *.tmp
+GAScore/include/handler_register_map.hpp
+tests/projects/
+include/user_config.hpp
 
 # Prerequisites
 *.d
