Add dummy ports to kernel for Galapagos compatibility
Change Vivado HLS include path
Verify IP versions instead of Vivado versions
Add profiling to kernels for sonar TBs
fix: Missing -C flag in run.sh
fix: SW library to build for HW properly

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ vivado_pid*.str
 *.tmp
 GAScore/include/handler_register_map.hpp
 tests/projects/
+tests/src/
 include/user_config.hpp
 
 # Prerequisites
