--- a/tests/Makefile
+++ b/tests/Makefile
@@ -20,8 +20,10 @@ SHELL := bash
 ################################################################################
 
 test_dir := $(SHOAL_PATH)/tests
+test_build_dir := $(test_dir)/build
 
 c_modules := node_2_kern_2_1
+custom_modules := hls_kernel
 
 ################################################################################
 # Body
@@ -37,6 +39,7 @@ config-$1: guard-SONAR_PATH
 	@if [[ -f $($1_sim_path)/$1_sv.dat ]]; then cp $(test_build_dir)/$1/$1_sv.dat $($1_sim_path); fi
 endef
 $(foreach module, $(c_modules),$(eval $(call make-config,$(module),all)))
+$(foreach module, $(custom_modules),$(eval $(call make-config,$(module),sv)))
 
 define make-sim
 sim-$1: guard-VIV_MODE guard-VIV_SIM guard-VIV_CREATE guard-VIV_SYNTH guard-VIV_IMPL guard-VIV_BIT guard-VIV_EXPORT
@@ -46,3 +49,12 @@ sim-$1: guard-VIV_MODE guard-VIV_SIM guard-VIV_CREATE guard-VIV_SYNTH guard-VIV_
 		--synth $(VIV_SYNTH) --impl $(VIV_IMPL) --bit $(VIV_BIT) --export $(VIV_EXPORT)
 endef
 $(foreach module, $(c_modules),$(eval $(call make-sim,$(module),c)))
+
+define make-sim-custom
+sim-$1: guard-VIV_MODE guard-VIV_SIM guard-VIV_CREATE guard-VIV_SYNTH guard-VIV_IMPL guard-VIV_BIT guard-VIV_EXPORT
+	@if [[ $(VIV_CREATE) == 1 ]]; then $(test_dir)/$1.sh; fi
+	@vivado -mode $(VIV_MODE) -source $(test_dir)/generate_vivado.tcl -notrace \
+		-tclargs --project $1 --sim $(VIV_SIM) --create $(VIV_CREATE) \
+		--synth $(VIV_SYNTH) --impl $(VIV_IMPL) --bit $(VIV_BIT) --export $(VIV_EXPORT)
+endef
+$(foreach module, $(custom_modules),$(eval $(call make-sim-custom,$(module))))
